2019-04-27  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* Added .reserve() to a few variables
* seqgen streams new letters directly to output, not keeping entire new
sequence in memory
* seqgen version bumped to v1.1
* Dropped -p option for countlets
* countlets has a new -a option, allowing to specify alphabet to prevent
loading entire sequence into memory (at the cost of speed for higher k)
* countlets version bumped to v1.1

2019-04-26  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* Added countfa v1.0
* shuffler -f now inserts newlines every 80 characters
* Streamlined shuffler internals: sequences in fasta files are loaded,
shuffled and output one at a time instead of keeping the entire file in
memory
* shuffler version bumped to v1.1

2019-04-25  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* Added seqgen v1.0

2019-04-24  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* countlets and shuffler are now v1.0
* New default shuffling method: euler
* The linear shuffling method can still be used with -l flag
* countlets can show progress with -p flag
* Rewrote count_klets() internals, much faster now
* shuffler can work on fasta-formatted input with -f flag

2019-04-20  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* For markov shuffling method verbose mode: instead of showing k-let counts,
shows before and after counts of individual letters
* make_klets() and count_klets() have been moved to klets.cpp
* Changed exit behaviour for requesting usage
* Count numbers are printed right aligned

2019-04-19  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* Initial release